--- a/public/backend/css/layout.css
+++ b/public/backend/css/layout.css
@@ -133,3 +133,8 @@
   background-color: white;
   padding: 15px;
 }
+#wrapper_one .institure_detail {
+  background-color: #efefef;
+  padding: 15px;
+  margin-bottom: 15px;
+}
