--- a/public/backend/css/layout.css
+++ b/public/backend/css/layout.css
@@ -138,3 +138,71 @@
   padding: 15px;
   margin-bottom: 15px;
 }
+
+/* ********************************************************** */
+.full_wrapper {
+  margin-top: 150px;
+  background-color: whitesmoke;
+  padding:25px;
+}
+.thumbnail_image {
+  margin-top: -152px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.thumbnail_image img {
+  width: 100%;
+}
+fieldset.fieldSet_wrapper {
+  border: 1px solid gainsboro;
+  padding: 15px;
+}
+
+fieldset.fieldSet_wrapper legend {
+  width: auto;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.thumbnail_image input[type='file'] {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  opacity: 0;
+} 
+
+.thumbnail_image span {
+    position: absolute;
+    top: 44%;
+    right: 0;
+    transform: translate(-66%, 0%);
+    opacity: 0.5;
+}
+
+.select_style select{
+  display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #6e707e;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #d1d3e2;
+    border-radius: .35rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+.btn_group {
+  margin-top: 25px;
+}
+.btn_group > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: none !important;
+}
+.btn_group > div button{
+  margin-right: 15px;
+}
