--- a/public/backend/css/layout.css
+++ b/public/backend/css/layout.css
@@ -281,20 +281,34 @@ fieldset.fieldSet_wrapper legend {
   display: flex;
   justify-content: center;
 }
+ 
+.breadcrumb_wrapper ul li {
+  display: inline;
+}
+.breadcrumb_wrapper ul {
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
 .breadcrumb_wrapper {
   position: relative;
+  background-color: #eeeeee;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .breadcrumb_wrapper > a {
   position: absolute;
-  top: 9px;
-  right: 18px;
+  top: 7px;
+  right: 7px;
 }
-
 /* **************************************************************** */
 .content_info_wrapper,
 .image_thumbnail_wrapper {
-  background-color: #eaecf4;
+  background-color: #ffffff;
   padding: 15px;
   border-radius: 3px;
   margin-bottom:30px;
@@ -385,4 +399,25 @@ a.deleteExperience {
     color: white !important;
     text-transform: capitalize;
     border-radius: 5px;
+}
+.form-group label {
+  font-weight: 700;
+}
+.badge.table_badge.text-primary {
+  background-color: #4e73df!important;
+  color: white !important;
+  font-size: 14px;
+  width: 100%;
+}
+.badge.table_badge.text-success {
+  background-color: #4edf66 !important;
+  color: white !important;
+  font-size: 14px;
+  width: 100%;
+}
+.badge.table_badge.text-danger {
+  background-color: #ed4816!important;
+  color: white !important;
+  font-size: 14px;
+  width: 100%;
 }
